<resources>
    <string name="map_api_key">AIzaSyApbSP89zy4SiArXT2Nhi-LItRK0yjyiAY</string>
    <string name="app_name">Dolphin</string>
    <string name="signin">Sign In</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="creat_acc_cl">member sign up ?</string>
    <string name="technical_sign_up">technical sign up?</string>
    <string name="skip">Skip</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="specialization">Specialization</string>
    <string name="add_photo">Add Photo</string>
    <string name="send">Send</string>
    <string name="recv_msg">Recover your account.We will send you a link to change your password</string>
    <string name="recover_password">Recover Password</string>
    <string name="notification">Notifications</string>
    <string name="ok">Ok</string>
    <string name="email_req">Email is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="phone_req">Phone is required</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="password_req">Password is required</string>
    <string name="signng_in">Signing In...</string>
    <string name="address_req">Address is required</string>
    <string name="country_req">Country is required</string>
    <string name="city_req">City is required</string>
    <string name="name_req">Name is required</string>
    <string name="app_open_gps">App will open gps to fetch your location.</string>
    <string name="acc_loc_denied">Access location Permission denied</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_country">Choose country</string>
    <string name="something">Error : Something went haywire try again later</string>
    <string name="lod_country">Loading countries...</string>
    <string name="ch_photo">Choose profile photo</string>
    <string name="acc_photo_denied">Access photo permission denied</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="logout">Logout</string>
    <string name="main">Home</string>
    <string name="me">Profile</string>
    <string name="si_su">Please sign in or create a new account.</string>
    <string name="message">Message</string>
    <string name="sendng">Sending...</string>
    <string name="msg_req">Message is required</string>
    <string name="there_are_no_orders_to_display">There are no orders to display</string>
    <string name="new_order">New</string>
    <string name="curr_order">Current</string>
    <string name="prev_order">Previous</string>
    <string name="account_open">This account is open by someone else</string>
    <string name="no_spec">There are no specialization to display</string>
    <string name="lodng_spec">Loading specializations...</string>
    <string name="signing_up">Signing Up...</string>
    <string name="loggng_out">Logging out...</string>
    <string name="ph">Phone</string>
    <string name="em">Email</string>
    <string name="image">Image</string>
    <string name="sound">Sound</string>
    <string name="video">Video</string>
    <string name="describe_the_problem">Describe the problem</string>
    <string name="next">Next</string>
    <string name="choose_date">Choose date</string>
    <string name="reservation_type">Reservation type</string>
    <string name="choose_time">Expected hours</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="desc_req">Description is required</string>
    <string name="hours">hours</string>
    <string name="normal">Normal</string>
    <string name="emergency">Emergency</string>
    <string name="select">Select</string>
    <string name="exp_req">Expected hour are required</string>
    <string name="sel_res_type">Select reservation type</string>
    <string name="sel_date">Select date</string>
    <string name="accept">Accept</string>
    <string name="notf">Notifications</string>
    <string name="there_are_no_notifications_to_display">There are no notifications to display</string>
    <string name="confirm">confirm</string>
    <string name="reprieve">reprieve</string>
    <string name="work_completed_successfully">Work completed successfully</string>
    <string name="evaluate_quality_officer">Evaluate quality officer</string>
    <string name="rating">Rating</string>
    <string name="evaluation">Evaluation</string>
    <string name="bad">bad</string>
    <string name="moderate">moderate</string>
    <string name="perfect">perfect</string>
    <string name="note">Note</string>
    <string name="evaltng">Evaluating...</string>
    <string name="wait">Wait...</string>
    <string name="succ">Success</string>
    <string name="update">Update</string>
    <string name="serv_aval_client">This service available to clients only</string>
    <string name="bokng">Booking...</string>
    <string name="bok_succ">Booking successfully</string>
    <string name="start">START</string>
    <string name="work_schedules_were_distributed">Work schedules were distributed</string>
    <string name="client_name">Client name</string>
    <string name="order">Order</string>
    <string name="date">Date</string>
    <string name="order_details">Order Details</string>
    <string name="work_details">Work details</string>
    <string name="audio">Audio</string>
    <string name="hours2">Hours</string>
    <string name="hours_cost">Hours cost</string>
    <string name="cost_of_spare_parts">Cost of spare parts</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="total_cost">Total cost</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="details">Details</string>
    <string name="bill">Bill</string>
    <string name="hours_req">hours is required</string>
    <string name="spare_req">Spare part is required</string>
    <string name="delivery_req">Spare part delivery cost is required</string>
    <string name="discount_req">Discount is required</string>
    <string name="disc_larg_total">Discount is grater than total</string>
    <string name="payment">Payment</string>
    <string name="ch_payment_type">Choose payment type.</string>
    <string name="cash">Cash</string>
    <string name="bill2">Bill</string>
    <string name="arrived">Arrived</string>
    <string name="start2">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">restart</string>
    <string name="finish">finish</string>
    <string name="cnt_start">Cannot start no payment</string>
    <string name="no_image">No Image</string>
    <string name="no_sound">No Audio</string>
    <string name="no_video">No Video</string>
    <string name="ph_em">Phone or email are exist</string>
    <string name="updtng">Updating...</string>
    <string name="new_password">New Password</string>
    <string name="upd_name">Update name</string>
    <string name="upd_phone">Update phone</string>
    <string name="upd_email">Update email</string>
    <string name="upd_address">Update address</string>
    <string name="upd_password">Update password</string>
    <string name="old_pass">Old password</string>
    <string name="newpass_req">New password  is required</string>
    <string name="wrong_oldpass">Incorrect old password</string>
    <string name="per_den">Access photo permission denied</string>
    <string name="uphone_exist">User phone is exist</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="admin">Admin</string>
    <string name="work_schedules">Work schedules distributed</string>
    <string name="confirm_technical_arrive">Confirm technical arrive</string>
    <string name="Finished_add_evaluation">Finished add evaluation</string>
    <string name="Evaluation_official">Evaluation of official quality</string>
    <string name="no_user_phone">There are no users have this phone</string>
    <string-array name="payment">
        <item>Choose</item>
        <item>Cash</item>
        <item>Bill</item>

    </string-array>

</resources>
