<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/home"
            android:icon="@drawable/home2"
            android:title="@string/home"
            android:checked="true"
            />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/user2"
            android:title="@string/profile" />
        <item
            android:id="@+id/my_order"
            android:icon="@drawable/cart2"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/nav_contct_us_icon"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/rule"
            android:icon="@drawable/nav_rule_icon"
            android:title="@string/terms_and_condition" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/nav_logout_icon"
            android:title="@string/logout" />
    </group>


</menu>
