<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@drawable/fragment_date_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/toolbar_color"

            >
            <ImageView
                android:id="@+id/image_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:src="@drawable/colored_back_arrow"
                android:padding="17dp"
                />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="@drawable/ll_add_photo"
                android:layout_marginTop="30dp"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight=".15"
                    android:layout_height="match_parent"
                    android:src="@drawable/down_arrow"
                    android:padding="15dp"
                    android:clickable="false"
                    android:longClickable="false"
                    />
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:hint="@string/choose_date"
                    android:textColorHint="@color/white"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:longClickable="false"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight=".15"
                    android:layout_height="match_parent"
                    android:src="@drawable/calender_icon"
                    android:padding="10dp"
                    android:clickable="false"
                    android:longClickable="false"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/reservation_type"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <Button
                    android:id="@+id/btn_normal"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="40dp"
                    android:layout_marginEnd="3dp"
                    tools:ignore="RtlCompat"
                    android:background="@drawable/btn_unselected"
                    android:textColor="@color/white"
                    android:text="@string/normal"

                    />
                <Button
                    android:id="@+id/btn_emergency"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="40dp"
                    android:layout_marginStart="3dp"
                    tools:ignore="RtlCompat"
                    android:background="@drawable/btn_unselected"
                    android:textColor="@color/white"
                    android:text="@string/emergency"

                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/choose_time"
                />
            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="@drawable/ll_add_photo"
                android:layout_marginTop="8dp"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight=".15"
                    android:layout_height="match_parent"
                    android:src="@drawable/clock_icon"
                    android:padding="10dp"
                    android:clickable="false"
                    android:longClickable="false"
                    />
                <EditText
                    android:id="@+id/edt_hours"
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:hint="@string/choose_time"
                    android:textColorHint="@color/white"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:background="@color/transparent"

                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/hours"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="37dp"
                android:layout_marginTop="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_sign_bg"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>