<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="2dp"
    app:contentPadding="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/not_bg"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        >
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="match_parent"

            >
            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                app:siRadius="5dp"
                android:layout_gravity="center"
                app:siBorderWidth="0dp"

                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/not_clock"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tv_not_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColor="@color/sel_color"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="منذ ساعة واحدة"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="كهربائي"
                android:layout_marginTop="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                >
                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:background="@drawable/ll_add_photo"
                    android:text="@string/confirm"
                    />
                <Button
                    android:id="@+id/btn_reprieve"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:background="@drawable/ll_add_photo"
                    android:text="@string/reprieve"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"

                    />
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:background="@drawable/ll_add_photo"
                    android:text="@string/cancel"

                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>